<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="avatar">Avatar</string>
    <string name="menu">Menu</string>
    <string name="favorite_count" translatable="false">10</string>
    <string name="favorites">Favorites</string>
    <string name="shared_count" translatable="false">20</string>
    <string name="visible">Visible</string>
    <string name="visible_count" translatable="false">30</string>
    <string name="shared">Shared</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="description_post_like">Like</string>
    <string name="edit">Edit</string>
    <string name="chancel">Chancel</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="error_empty_content">Content can\\\'t be empty</string>
    <string name="description_post_save">Post save</string>
</resources>