<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_spacing"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@drawable/ic_netology_48dp" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@string/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@string/published" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toTopOf="@id/barrierMenu"
        tools:text="@string/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="TODO"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        tools:srcCompat="@drawable/baseline_favorite_border_24" />

    <TextView
        android:id="@+id/favorite_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="10"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toTopOf="@id/likes" />

    <ImageView
        android:id="@+id/shared"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintStart_toEndOf="@id/favorite_count"
        app:layout_constraintTop_toTopOf="@id/likes"
        tools:srcCompat="@drawable/baseline_share_24" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="20"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintStart_toEndOf="@id/shared"
        app:layout_constraintTop_toTopOf="@id/likes"
        tools:text="20" />


    <ImageView
        android:id="@+id/visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toStartOf="@id/visible_count"
        app:layout_constraintTop_toTopOf="@id/likes"
        tools:srcCompat="@drawable/baseline_visibility_24" />

    <TextView
        android:id="@+id/visible_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="30"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likes" />
</androidx.constraintlayout.widget.ConstraintLayout>