<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/common_spacing"
    android:paddingTop="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/post_avatar_size"
        android:layout_height="@dimen/post_avatar_size"
        android:contentDescription="@string/avatar"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/App.Widget.ButtonMenu"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu"
        app:icon="@drawable/ic_more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <ImageView
        android:id="@+id/video"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_french"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/barrierMenu"
        app:layout_constraintBottom_toBottomOf="@id/barrierContent"/>

    <ImageView
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/video"
        app:layout_constraintBottom_toBottomOf="@id/video"
        app:layout_constraintStart_toStartOf="@id/video"
        app:layout_constraintEnd_toEndOf="@id/video"
        android:src="@drawable/ic_play_48dp"/>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toTopOf="@id/barrierMenu" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/likes"
        style="@style/App.Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:checkable="true"
        android:contentDescription="@string/favorites"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintTop_toBottomOf="@id/barrierContent"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shared"
        style="@style/App.Widget.ButtonStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shared"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintStart_toEndOf="@id/likes"
        app:layout_constraintTop_toTopOf="@id/likes"
        tools:layout_editor_absoluteX="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/visible"
        style="@style/App.Widget.ButtonStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/visible"
        app:icon="@drawable/ic_visibility_24"
        app:layout_constraintBottom_toBottomOf="@id/likes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/likes"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>